@@ -220,6 +220,7 @@ TESTS_twa = \
   core/385.test \
   core/521.test \
   core/522.test \
+  core/566.test \
   core/acc.test \
   core/acc2.test \
   core/bdddict.test \
